iss#240 Get rid of separate test-data folder: Migrated Repository tests